--- a/Sources/Abstract.tex
+++ b/Sources/Abstract.tex
@@ -1,16 +1,4 @@
 
-\begin{center}
-\begin{large}
-  Abstract of thesis entitled \\
-  ``Disjoint Intersection Types: Theory and Practice'' \\
-  Submitted by Xuan Bi \\
-  for the degree of Doctor of Philosophy \\
-  at The University of Hong Kong in August 2018
-\end{large}
-\end{center}
-
-\vspace*{\stretch{5}}
-
 Programs are hard to write. It was so 50 years ago at the time of the so-called
 software crisis; it still remains so nowadays. Over the years, we have
 learned---the hard way---that software should be constructed in a
@@ -61,3 +49,11 @@ This thesis unifies ideas that are seemingly unrelated but powerful on their
 own---dynamic inheritance, first-class traits, nested composition---by a
 lightweight mechanism, thus providing new insights into software modularity and
 extensibility.
+
+\vspace{1.5\baselineskip}
+
+\noindent\makebox[\linewidth]{\rule{0.7\textwidth}{0.4pt}}
+
+\begin{center}
+\textbf{An abstract of exactly 500 words}
+\end{center}
